fix: changed main vh since it was too wide to fit on the screen

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,6 @@
 }
 .main
 {
-    height: 99vh;
-    width: 99vw;
+    height: 90vh;
+    width: 90vw;
 }
